--- a/email-template.html
+++ b/email-template.html
@@ -112,6 +112,7 @@
                                             
                                             Best regards,<br>
                                             <span id="recruiterName2"></span><br>
+                                            Recruitment department at <span id="companyName2"></span><br>
                                         </font>
                                     </div>
                                 </td>
@@ -135,6 +136,7 @@
             document.getElementById('companyName').textContent = localStorage.getItem('companyName');
             document.getElementById('companyName2').textContent = localStorage.getItem('companyName');
             document.getElementById('recruiterName').textContent = localStorage.getItem('recruiterName');
+            document.getElementById('recruiterName2').textContent = localStorage.getItem('recruiterName');
             document.getElementById('jobPost').textContent = localStorage.getItem('jobPost');
             document.getElementById('emailHeading').textContent = localStorage.getItem('emailHeading');
 
