--- a/email-template.html
+++ b/email-template.html
@@ -62,7 +62,7 @@
                 </td>
                 <td align="right">
                     <font size="-1">
-                        <b><span id="name1"></span> &lt;<span id="name2"></span>>&gt;</b>
+                        <b><span id="name1"></span> &lt;<span id="name2"></span>&gt;</b>
                     </font>
                 </td>
             </tr>
